--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^16.13.1",
     "react-paypal-button-v2": "^2.6.1",
     "react-toastify": "^5.5.0",
-    "uuid": "^8.0.0"
+    "uuid": "^8.0.0",
+    "yup": "^0.29.0"
   },
   "devDependencies": {
     "@storybook/react": "^5.3.18",
