--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-lottie": "^1.2.3",
     "react-paypal-button-v2": "^2.6.1",
     "react-toastify": "^5.5.0",
     "uuid": "^8.0.0",
