--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^14.6.0",
     "gsap": "^3.2.6",
     "isomorphic-unfetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
     "mongoose": "^5.9.6",
     "next": "^9.3.1",
